@@ -1,5 +1,10 @@
 2006-06-24  Robert Millan  <robertmh@gnu.org>
 
+	* lib/device.c (write_to_partition): /dev/ataraid/ and /dev/rd/
+	partitions have a "p" prefix.  Add it.
+
+2006-06-24  Robert Millan  <robertmh@gnu.org>
+
 	* lib/device.c (get_i2o_disk_name): New function.
 	(init_device_map) [__linux__]: Add support for I2O devices.
 
